# simulations

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/meshes/: RubberDuck.mtl  WarRubberDuck.mtl  cat.mtl  handle.mtl  skull.mtl  tessellated_cube.mtl
src/: CMakeLists.txt
src/blackhole/: CMakeLists.txt  blackhole_app.cc  blackhole_app.hh  blackhole_ui.cc  blackhole_ui.hh  main.cc
src/blackhole/shaders/: shader.frag  shader.vert
src/common/: app.cc  app.hh  buffer.hh  camera.cc  camera.hh  common.cc  common.hh  cubemap_texture.cc  cubemap_texture.hh  framebuffer.cc  framebuffer.hh  function.cc  function.hh  material.cc  material.hh  message_queue.hh  model.cc  model.hh  pch.cc  pch.hh  shader.cc  shader.hh  shader_program.cc  shader_program.hh  simulation.cc  simulation.hh  texture.cc  texture.hh  ui.cc  ui.hh  uniform.cc  uniform.hh  uniform_types.hh  utils.hh  vertex_array.hh  vertices.hh  window.cc  window.hh
src/flywheel/: CMakeLists.txt  flywheel.cc  flywheel.hh  flywheel_app.cc  flywheel_app.hh  flywheel_ui.cc  flywheel_ui.hh  main.cc
src/flywheel/shaders/: phong.frag  phong.vert
src/jelly/: CMakeLists.txt  controllable_box.cc  controllable_box.hh  jelly.cc  jelly.hh  jelly_app.cc  jelly_app.hh  jelly_ui.cc  jelly_ui.hh  main.cc
src/jelly/shaders/: basic.frag  bezier_cube.frag  bezier_cube.tesc  bezier_cube.tese  bezier_cube.vert  model.frag  model.vert  phong.frag  wireframe.frag  wireframe.vert
src/spring/: CMakeLists.txt  function.cc  function.hh  main.cc  spring.cc  spring.hh  spring_app.cc  spring_app.hh  spring_simulation.cc  spring_simulation.hh  spring_ui.cc  spring_ui.hh
src/spring/shaders/: basic.vert  spring.frag  spring.geom  spring.vert  weight.frag  weight.vert
src/whirligig/: CMakeLists.txt  main.cc  whirligig.cc  whirligig.hh  whirligig_app.cc  whirligig_app.hh  whirligig_simulation.cc  whirligig_simulation.hh  whirligig_ui.cc  whirligig_ui.hh
src/whirligig/shaders/: basic.frag  basic.vert  phong.frag  phong.vert
